--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
         ports:
             - "9999:9999"
         volumes:
-            - .:/app
+            - ./app:/app
         depends_on:
             - pleo-db
 
